--- a/packages/manager-components/src/components/Setup/styles.css
+++ b/packages/manager-components/src/components/Setup/styles.css
@@ -12,5 +12,5 @@
 }
 
 .setup__exchanges-checkbox {
-  margin-bottom: var(--space-xs);
+  margin: var(--space-xxs) 0;
 }
